@@ -54,10 +54,12 @@ class QTPIECharges : public OBChargeModel
 public:
   QTPIECharges(void) : OBChargeModel("fake ID", false){};
   QTPIECharges(const char* ID) : OBChargeModel(ID, false){};
-  const char* Description(){ return "Assign QTPIE (charge equilibration) partial charges (Rappe and Goddard, 1991)"; }
+  const char* Description(){ return "Assign QTPIE (charge transfer, polarization and equilibration) partial charges (Chen and Martinez, 2007)"; }
   
   /// \return whether partial charges were successfully assigned to this molecule
   bool ComputeCharges(OBMol &mol);
+
+  double DipoleScalingFactor() { return 4.121; } // fit from regression
 
 private:
   Vector3d GetParameters(unsigned int Z, int Q);
